2004-05-21  Jerry James  <james@xemacs.org>

	* cl.el (cl-random-time): Chop a bignum down to a fixnum if
	(featurep 'bignum), not if (featurep 'number-types).

2004-05-15  Malcolm Purvis  <malcolmp@xemacs.org>

	* gtk-widgets.el: New import: gtk-accel-group-new.
	* dialog-gtk.el:
	* dialog-gtk.el (gtk-popup-convert-underscores): New.
	* dialog-gtk.el (popup-builtin-question-dialog):

	Added support for dialog button mnemonics.


2004-04-30  Stephen J. Turnbull  <stephen@xemacs.org>

	* cl.el (gensym, gentemp): Improve docstrings.

2004-05-11  Stephen J. Turnbull  <stephen@xemacs.org>

	* code-init.el (set-eol-detection): Special-case 'no-conversion.

2004-05-10  Stephen J. Turnbull  <stephen@xemacs.org>

	* isearch-mode.el (isearch-forward, isearch-abort): Document that our
	behavior of `isearch-abort' differs from that of GNU Emacs.

2004-05-08  Sven Grundmann  <sven@xemacs.org>

	* etags.el:
	* etags.el (tags-exuberant-ctags-optimization-p): Enable optimization
	only for use with exuberant ctags. This will also enable building of 
	completion tables with exuberant ctags. This will not work with
	xemacs ctags. New.
	* etags.el (get-tag-table-buffer): New function for creating of
	completion table is used if tags-exuberant-ctags-optimization-p ist t
	* etags.el (add-to-tag-completion-table-exuberant-ctags): Defun for
	building tag completion table with exuberant ctags. New.
	* etags.el (find-tag-internal): Improve exact tag matching for tags
	with name fields. Before the patch return types of functions or
	function parameters (with exuberant ctags) were found as matches.

2004-04-20  Malcolm Purvis  <malcolmpurvis@optushome.com.au>

 	* gtk-marshal.el: Return type for INT is gint, not guint.

2004-02-23  Stephen J. Turnbull  <stephen@xemacs.org>

	* isearch-mode.el (isearch-abort): Preserve successful search target.

2004-04-19  Stephen J. Turnbull  <turnbull@sk.tsukuba.ac.jp>

	* startup.el (site-start-file):
	(load-init-file):
	Improve documentation.
